--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-search",
   "version": "0.1.0",
-  "homepage": "https://rehbeinkobs.github.io/word-search"
+  "homepage": "https://rehbeinkobs.github.io/word-search",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
